# raft-kv

./: .env.example  README.md  demo.sh  pyproject.toml
docs/: ARCHITECTURE.md  TESTING.md
docs/explainers/: brief.tex  deep-dive.tex
docs/screenshots/: run-output.txt
src/raftkv/: __init__.py  client.py  server.py
src/raftkv/checker/: __init__.py  history.py  linearizability.py
src/raftkv/cli/: main.py
src/raftkv/kv/: __init__.py  machine.py
src/raftkv/raft/: __init__.py  env.py  log.py  messages.py  node.py  storage.py
src/raftkv/sim/: __init__.py  batch.py  clock.py  harness.py  network.py
src/raftkv/transport/: __init__.py  tcp.py
tests/: conftest.py  test_election.py  test_kv_sessions.py  test_linearizability.py  test_membership.py  test_persistence.py  test_readindex.py  test_replication.py  test_sim_invariants.py  test_snapshot.py  test_tcp_integration.py
