[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "raftkv"
version = "0.1.0"
description = "Distributed key-value store with Raft consensus, deterministic simulation testing, and a linearizability checker"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Salman Adnan" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
raftkv = "raftkv.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: longer simulation batches (deselect with '-m \"not slow\"')",
]
